It's been a minute, but I want new pants again and it's all out of inventory.
Since last time, Lululemon has updated their inventory API and the
previous endpoint no longer works. The new endpoint now contains much
more data in the form of the entire product details page. Now we have to
jq filter through a nested JSON hierarchy to determine if the item is in
stock in the desired size. Luckly we can still do this thru jq and keep
the github actions pipeline largely the same. Here are some handy links
that helped for future me who will have to probably do this all over
again in a few years:

* https://github.com/stedolan/jq/wiki/Cookbook#filter-objects-based-on-the-contents-of-a-key
* http://www.compciv.org/recipes/cli/jq-for-parsing-json

--- a/.github/workflows/abc-jogger-scrape.yml
+++ b/.github/workflows/abc-jogger-scrape.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl https://shop.lululemon.com/api/shipinventory\?skus\=122850240,3823442,122850254,101755267\&productId\=prod9270549 | jq . > abc_jogger_inventory.json
+        curl https://shop.lululemon.com/api/p/mens-trousers/ABC-Pant-Slim-30/_/prod9610173\?color\=32476\&sz\=30 | jq '.data.attributes."purchase-attributes"."size-driver"[] | select(.size | contains("30"))' > abc_slim_pant_inventory.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
